# cortex

./: .gitattributes  .gitignore  .prettierrc  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  SECURITY.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  svelte.config.js  tsconfig.json  vite.config.ts
docs/: MODULE_CONTRACT.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 001_initial_schema.sql  002_settings.sql
src-tauri/src/: commands.rs  host_commands.rs  lib.rs  main.rs  query_commands.rs
src-tauri/src/backup/: README.md  health.rs  mod.rs
src-tauri/src/core/: bus.rs  health.rs  llm.rs  mod.rs  types.rs
src-tauri/src/cost/: README.md  health.rs  mod.rs
src-tauri/src/db/: migrate.rs  mod.rs
src-tauri/src/inject/: README.md  health.rs  mod.rs
src-tauri/src/librarian/: README.md  consolidation.rs  health.rs  mod.rs
src-tauri/src/memory/: README.md  conf.rs  episodic.rs  health.rs  instcap.rs  mod.rs  pass1.rs  pass2.rs  rollext.rs  scores.rs
src-tauri/src/oauth/: README.md  health.rs  mod.rs
src-tauri/src/portability/: README.md  health.rs  mod.rs
src-tauri/src/providers/: README.md  claudecode.rs  cloud.rs  fallback.rs  health.rs  local.rs  mod.rs
src-tauri/src/sync/: README.md  health.rs  mod.rs
src-tauri/src/tasks/: README.md  health.rs  mod.rs
src-tauri/src/telegram/: README.md  health.rs  mod.rs
src-tauri/src/tools/: README.md  health.rs  mod.rs
src-tauri/src/vault/: README.md  health.rs  mod.rs
src-tauri/src/watch/: README.md  health.rs  mod.rs
(+19 files in other folders)
